--- a/mytmux.conf
+++ b/mytmux.conf
@@ -45,3 +45,17 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+# scroll the page
+# CTRL-a then [ to enter scroll mode
+# Function                     vi              emacs
+# --------                     --              -----
+# Half page down               C-d             M-Down
+# Half page up                 C-u             M-Up
+# Next page                    C-f             Page down
+# Previous page                C-b             Page up
+# Scroll down                  C-Down or C-e   C-Down
+# Scroll up                    C-Up or C-y     C-Up
+# Search again                 n               n
+# Search again in reverse      N               N
+# Search backward              ?               C-r
+# Search forward               /               C-s
