Add how to copy and paste instructions in tmux

--- a/mytmux.conf
+++ b/mytmux.conf
@@ -59,3 +59,15 @@ bind -r L resize-pane -R 5
 # Search again in reverse      N               N
 # Search backward              ?               C-r
 # Search forward               /               C-s
+# 
+# 
+# Vim and tmux copy and paste
+# Copy:
+#   1. Press prefix (default ctrl-b, I mapped to crtl-a) to enter into copy mode
+#   2. Use Arrow key or (h, j, k, l if you set mode-key to vi)
+#   3. Press Ctrl + Space or just Space to start selection of the text (or just type V vi mode-key)
+#   4. Use the keys to include the text to be selected
+#   5. Press Ctrl-w or Alt-w to copy to tmux's clipboard
+#   
+# Paste:
+#   Press prefix + ] in INSERT mode of vim
